# state-space-fabric-sdk-cxx

./: .gitignore  Contributing.md  LICENSE  Makefile.am  PACKAGES.md  README.md  buildconf  configure.ac
maintenance/: nearby
mk/: .gitignore  buildconfed.mk  configured.mk
src/: .gitignore
src/hyperledger/: Boolean.xcpp  Count.xcpp  Dictionary.xcpp  Makefrag.am  Optional.xcpp  Outcome.xcpp  Returning.xcpp  Success.xcpp  literals.xcpp  namespace.xcpp
src/hyperledger/base64/: Makefrag.am  decode.xcpp  encode.xcpp  namespace.xcpp
src/hyperledger/byte/: Makefrag.am  Octet.xcpp  Span.xcpp  Storage.xcpp  literals.xcpp  namespace.xcpp
src/hyperledger/crypto/: Buffer.xcpp  Ecies.xcpp  Key.xcpp  Makefrag.am  Message.xcpp  Number.xcpp  Primitives.xcpp  Signature.xcpp  ecies.xcpp  generate_nonce.xcpp  namespace.xcpp  primitives.Interface.xcpp
src/hyperledger/detail/: Makefrag.am  namespace.xcpp  reformat.xcpp
src/hyperledger/dictionary/: Dictionary.xcpp  Makefrag.am  Pair.xcpp  namespace.xcpp  to_json.xcpp  to_string.xcpp
src/hyperledger/error/: Category.xcpp  Code.xcpp  Condition.xcpp  Makefrag.am  category.xcpp  code.Enumeration.xcpp  code.Package.xcpp  condition.Enumeration.xcpp  condition.Package.xcpp  namespace.xcpp
src/hyperledger/exception/: Aspect.xcpp  Certificate.xcpp  Decode.xcpp  Encode.xcpp  Filepath.xcpp  IOError.xcpp  Invalid.xcpp  Makefrag.am  Random.xcpp  Serialization.xcpp  System.xcpp  Unimplemented.xcpp  Unreachable.xcpp  feature.Random.xcpp  namespace.xcpp
src/hyperledger/fabric/: Boolean.xcpp  Contact.xcpp  Context.xcpp  Makefrag.am  Outcome.xcpp  Success.xcpp  User.xcpp  detail.Endpoints.xcpp  detail.Formatter.xcpp  detail.get_hostport.xcpp  detail.get_port.xcpp  error.Category.xcpp  error.Code.xcpp  error.Condition.xcpp  error.category.xcpp  exception.Aspect.xcpp  ip.Endpoint.xcpp  ip.Endpoints.xcpp  ip.Host.xcpp  ip.Port.xcpp  ip.Visitor.xcpp  ip.endpoint.Formatter.xcpp  ip.host.Formatter.xcpp  ip.host.Visitor.xcpp  ip.port.Formatter.xcpp  namespace.xcpp  orderer.Contact.xcpp  peer.Context.xcpp  peer.chaincode.Call.README  peer.chaincode.Call.xcpp  peer.chaincode.Context.README  peer.chaincode.Context.xcpp  peer.chaincode.Function.xcpp  peer.chaincode.Invoke.xcpp  peer.chaincode.Query.xcpp  peer.chaincode.README  peer.chaincode.call.xcpp  peer.chaincode.invoke.xcpp  peer.chaincode.query.xcpp  peer.chaincode.required.Is_Result.xcpp  (+60 more)
src/hyperledger/file/: Makefrag.am  Path.xcpp  namespace.xcpp
src/hyperledger/grpc/: Channel.xcpp  Endpoint.xcpp  Makefrag.am  Options.xcpp  channel.xcpp  namespace.xcpp
src/hyperledger/http/: Makefrag.am  literals.xcpp  namespace.xcpp
src/hyperledger/ip/: Endpoint.xcpp  Endpoints.xcpp  Host.xcpp  Makefrag.am  Port.xcpp  endpoints.Formatter.xcpp  format.xcpp  namespace.xcpp  to_string.xcpp
src/hyperledger/json/: Makefrag.am  Object.xcpp  String.xcpp  Value.xcpp  namespace.xcpp  to_string.xcpp
src/hyperledger/net/: Makefrag.am  namespace.xcpp
src/hyperledger/pki/: Authority.xcpp  Bundle.Certificate.Authority.xcpp  Bundle.Secret.Certificate.Authority.xcpp  Bundle.Secret.Certificate.xcpp  Bundle.revocation.Certificates.Names.xcpp  Bundle.revocation.Certificates.xcpp  Bundle.revocation.Names.xcpp  Bundle.template.xcpp  Bundle.xcpp  Certificate.xcpp  Certificates.xcpp  Makefrag.am  Request.xcpp  Secret.xcpp  Triple.xcpp  assemble.Secret.xcpp  assemble.template.xcpp  assemble.xcpp  channel.xcpp  from.Certificate.xcpp  from.Certificates.xcpp  from.Request.xcpp  from.Secret.xcpp  from.revocation.Certificates.xcpp  from.revocation.Names.xcpp  from.template.xcpp  from.xcpp  namespace.xcpp  slurp.Certificate.xcpp  slurp.Request.xcpp  slurp.Secret.xcpp  slurp.template.xcpp  slurp.xcpp  to_string.xcpp
src/hyperledger/protos/: Makefrag.am
src/hyperledger/required/: Character.xcpp  Character_Traits.xcpp  Endpointy.xcpp  Enumeration.xcpp  Makefrag.am  Octet.xcpp  container.Push_Back.xcpp  namespace.xcpp
src/hyperledger/runtime/: Makefrag.am  Management.xcpp  constants.xcpp  namespace.xcpp
src/hyperledger/string/: Makefrag.am  Sequencen.xcpp  Sequencez.xcpp  Storage.xcpp  View.xcpp  literals.xcpp  namespace.xcpp
src/hyperledger/time/: Clock.xcpp  Duration.xcpp  Makefrag.am  Point.xcpp  literals.xcpp  namespace.xcpp
src/hyperledger/tls/: Client.xcpp  Endpoint.xcpp  Endpoints.xcpp  Field.xcpp  Makefrag.am  format.xcpp  from_string.Endpoint.xcpp  from_string.Endpoints.xcpp  from_string.Series.xcpp  from_string.endpoints.Endpoint.xcpp  from_string.template.xcpp  from_string.xcpp  namespace.xcpp  to_string.xcpp
src/hyperledger/traits/: False.xcpp  Makefrag.am  True.xcpp  namespace.xcpp
src/hyperledger/units/: Count.xcpp  Makefrag.am  namespace.xcpp
src/hyperledger/variant/: Makefrag.am  Visitor.xcpp  namespace.xcpp  visit.xcpp
src/hyperledger/x509/: Certificate.xcpp  Constraints.xcpp  Makefrag.am  Name.xcpp  Request.xcpp  constraints.Constraints.RO.xcpp  constraints.Constraints.RW.xcpp  constraints.Constraints.template.xcpp  constraints.Constraints.xcpp  constraints.Prototype.xcpp  name.Hard.xcpp  name.Name.RO.xcpp  name.Name.RW.xcpp  name.Name.template.xcpp  name.Name.xcpp  name.Prototype.xcpp  namespace.xcpp  slurp.xcpp
src/langu/: Makefrag.am
src/langu/age/: Makefrag.am  dequote.Formatter.xcpp  dq.xcpp  namespace.xcpp  q.xcpp
src/langu/ish/: Makefrag.am  namespace.xcpp
src/nonstd/: Makefrag.am  filesystem.Fixture.xcpp  units.Count.xcpp
src/nonstd/filesystem/: dequote.xcpp  namespace.xcpp
src/nonstd/required/: Optionable.xcpp  Outcomable.xcpp  constructible.by.Copy.xcpp  (+2 more)
src/shell/: Makefrag.am
src/std/: Makefrag.am
src/tests/: Makefrag.am  namespace.xcpp
src/want/: Boolean.xcpp  Makefrag.am  enumeration.Category.xcpp  filesystem.dequote.xcpp  format.dequote.Formatter.xcpp  format.dq.xcpp  namespace.xcpp
tests/: .gitignore
tests/crypto/: all.test
tests/decode/: all.test
tests/encode/: all.test
tests/langu/: all.test
tests/nonstd/: all.test
tests/pki/: all.test
tests/shell/: all.test
tests/unit/: Makefrag.am  all.test  list.test  pki.test
tests/want/: all.test
(+677 files in other folders)
